[MOD] 주피터노트북 코드 Kfold오류 수정, 및 wandb Valid로그 추가

--- a/jupyter/baseline_torchmetrics_wandb.ipynb
+++ b/jupyter/baseline_torchmetrics_wandb.ipynb
@@ -60,10 +60,10 @@
    "cell_type": "code",
    "execution_count": 3,
    "source": [
-    "model_name = 'efficientnet_b1'\n",
+    "model_name = 'efficientnet_b0'\n",
     "#model_name = 'vit_base_patch16_384'\n",
-    "learning_rate = 2e-5\n",
-    "batch_size = 64\n",
+    "learning_rate = 1e-4\n",
+    "batch_size = 8\n",
     "step_size = 5\n",
     "epochs = 30\n",
     "earlystop = 5\n",
@@ -123,7 +123,7 @@
     "        if not os.path.exists(self.trans_csv_path):\n",
     "            self._makeCSV()\n",
     "        self.df = pd.read_csv(self.trans_csv_path)\n",
-    "        #self.df = self.df[:200]\n",
+    "        self.df = self.df[:200]\n",
     "    def _makeCSV(self):        \n",
     "        with open(self.trans_csv_path, 'w', newline='') as f:\n",
     "            writer = csv.writer(f)\n",
@@ -241,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "source": [
     "today = time.strftime('%Y%m%d_%H%M%S', time.localtime(time.time()))\n",
     "if not os.path.exists(save_dir + today):\n",
@@ -263,108 +263,9 @@
      "output_type": "stream",
      "name": "stderr",
      "text": [
-      "\u001b[34m\u001b[1mwandb\u001b[0m: \u001b[33mWARNING\u001b[0m Calling wandb.login() after wandb.init() has no effect.\n"
+      "Failed to detect the name of this notebook, you can set it manually with the WANDB_NOTEBOOK_NAME environment variable to enable code saving.\n",
+      "\u001b[34m\u001b[1mwandb\u001b[0m: Currently logged in as: \u001b[33mnudago\u001b[0m (use `wandb login --relogin` to force relogin)\n"
      ]
-    },
-    {
-     "output_type": "display_data",
-     "data": {
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ],
-      "text/html": [
-       "Finishing last run (ID:36czgld9) before initializing another..."
-      ]
-     },
-     "metadata": {}
-    },
-    {
-     "output_type": "display_data",
-     "data": {
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ],
-      "text/html": [
-       "<br/>Waiting for W&B process to finish, PID 31743<br/>Program ended successfully."
-      ]
-     },
-     "metadata": {}
-    },
-    {
-     "output_type": "display_data",
-     "data": {
-      "text/plain": [
-       "VBox(children=(Label(value=' 0.00MB of 0.00MB uploaded (0.00MB deduped)\\r'), FloatProgress(value=1.0, max=1.0)…"
-      ],
-      "application/vnd.jupyter.widget-view+json": {
-       "version_major": 2,
-       "version_minor": 0,
-       "model_id": "1f9038014173401b9d3cf811de665c44"
-      }
-     },
-     "metadata": {}
-    },
-    {
-     "output_type": "display_data",
-     "data": {
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ],
-      "text/html": [
-       "Find user logs for this run at: <code>/opt/ml/image-classification-level1-04/jupyter/wandb/run-20210831_181218-36czgld9/logs/debug.log</code>"
-      ]
-     },
-     "metadata": {}
-    },
-    {
-     "output_type": "display_data",
-     "data": {
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ],
-      "text/html": [
-       "Find internal logs for this run at: <code>/opt/ml/image-classification-level1-04/jupyter/wandb/run-20210831_181218-36czgld9/logs/debug-internal.log</code>"
-      ]
-     },
-     "metadata": {}
-    },
-    {
-     "output_type": "display_data",
-     "data": {
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ],
-      "text/html": [
-       "Synced 6 W&B file(s), 0 media file(s), 0 artifact file(s) and 0 other file(s)"
-      ]
-     },
-     "metadata": {}
-    },
-    {
-     "output_type": "display_data",
-     "data": {
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ],
-      "text/html": [
-       "\n",
-       "                    <br/>Synced <strong style=\"color:#cdcd00\">classic-jazz-2</strong>: <a href=\"https://wandb.ai/nudago/efficientnet_b1/runs/36czgld9\" target=\"_blank\">https://wandb.ai/nudago/efficientnet_b1/runs/36czgld9</a><br/>\n",
-       "                "
-      ]
-     },
-     "metadata": {}
-    },
-    {
-     "output_type": "display_data",
-     "data": {
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ],
-      "text/html": [
-       "...Successfully finished last run (ID:36czgld9). Initializing new run:<br/><br/>"
-      ]
-     },
-     "metadata": {}
     },
     {
      "output_type": "display_data",
@@ -375,10 +276,10 @@
       "text/html": [
        "\n",
        "                Tracking run with wandb version 0.12.1<br/>\n",
-       "                Syncing run <strong style=\"color:#cdcd00\">warm-smoke-3</strong> to <a href=\"https://wandb.ai\" target=\"_blank\">Weights & Biases</a> <a href=\"https://docs.wandb.com/integrations/jupyter.html\" target=\"_blank\">(Documentation)</a>.<br/>\n",
-       "                Project page: <a href=\"https://wandb.ai/nudago/efficientnet_b1\" target=\"_blank\">https://wandb.ai/nudago/efficientnet_b1</a><br/>\n",
-       "                Run page: <a href=\"https://wandb.ai/nudago/efficientnet_b1/runs/2zypf8lr\" target=\"_blank\">https://wandb.ai/nudago/efficientnet_b1/runs/2zypf8lr</a><br/>\n",
-       "                Run data is saved locally in <code>/opt/ml/image-classification-level1-04/jupyter/wandb/run-20210831_181354-2zypf8lr</code><br/><br/>\n",
+       "                Syncing run <strong style=\"color:#cdcd00\">robust-cloud-7</strong> to <a href=\"https://wandb.ai\" target=\"_blank\">Weights & Biases</a> <a href=\"https://docs.wandb.com/integrations/jupyter.html\" target=\"_blank\">(Documentation)</a>.<br/>\n",
+       "                Project page: <a href=\"https://wandb.ai/nudago/efficientnet_b0\" target=\"_blank\">https://wandb.ai/nudago/efficientnet_b0</a><br/>\n",
+       "                Run page: <a href=\"https://wandb.ai/nudago/efficientnet_b0/runs/3n1via13\" target=\"_blank\">https://wandb.ai/nudago/efficientnet_b0/runs/3n1via13</a><br/>\n",
+       "                Run data is saved locally in <code>/opt/ml/image-classification-level1-04/jupyter/wandb/run-20210901_044710-3n1via13</code><br/><br/>\n",
        "            "
       ]
      },
@@ -389,18 +290,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
    "source": [
     "from torchmetrics.functional import f1\n",
     "calc_train_acc = torchmetrics.Accuracy()\n",
-    "calc_train_f1 = torchmetrics.F1(num_classes=18)"
+    "calc_train_f1 = torchmetrics.F1(num_classes=18)\n",
+    "calc_train_loss = torchmetrics"
    ],
    "outputs": [],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 10,
    "source": [
     "earlystop_value = 0\n",
     "best_model = copy.deepcopy(model.state_dict())\n",
@@ -408,12 +310,12 @@
     "best_loss = 999999999\n",
     "\n",
     "wandb.watch(model, criterion, log='all')\n",
+    "#example_ct = 0\n",
     "for epoch in range(epochs):\n",
     "    if earlystop_value >= earlystop:\n",
     "        break\n",
     "    train_loss, valid_loss, train_acc_list, valid_acc_list = 0, 0, [],[]\n",
     "    \n",
-    "    example_ct = epoch * len(dataloaders[phase]) + batch_idx\n",
     "    for phase in ['train', 'valid']:\n",
     "        if phase == 'train':\n",
     "            model.train()\n",
@@ -424,7 +326,8 @@
     "        running_corrects = 0\n",
     "        with tqdm(dataloaders[phase], total=dataloaders[phase].__len__(), unit=\"batch\") as train_bar:\n",
     "            for batch_idx, (inputs, labels) in enumerate(train_bar):\n",
-    "                #print(example_ct)\n",
+    "                if phase == 'train':\n",
+    "                    example_ct = epoch * (len(dataloaders['train'])) + batch_idx\n",
     "                train_bar.set_description(f\"{phase} Epoch {epoch} \")\n",
     "                inputs, labels = inputs.to(device), labels.to(device)\n",
     "\n",
@@ -438,17 +341,18 @@
     "\n",
     "                outputs = outputs.cpu().detach()#.numpy()\n",
     "                labels = labels.cpu().detach()#.numpy()\n",
-    "\n",
+    "                running_loss += loss.item() * inputs.size(0)\n",
+    "                epoch_loss = running_loss / len(dataloaders[phase].dataset)\n",
     "                train_acc = calc_train_acc(outputs.argmax(1), labels)\n",
     "                train_f1 = calc_train_f1(outputs.argmax(1), labels)\n",
+    "                \n",
     "                train_bar.set_postfix(loss=epoch_loss, acc=train_acc, f1=train_f1)\n",
-    "\n",
-    "                wandb.log({f'{phase}_loss':loss.item(),  f'{phase}_acc':train_acc}, step=example_ct)\n",
-    "                # else:\n",
-    "                #     wandb.log({'valid_loss':loss.item(),  'valid_acc':running_corrects})\n",
+    "                if phase == 'train':\n",
+    "                    wandb.log({'train_loss':loss.item(),  'train_acc':train_acc}, step=example_ct)\n",
     "\n",
     "        lr_scheduler.step()\n",
     "        if phase=='valid':\n",
+    "            wandb.log({'valid_loss':loss.item(),  'valid_acc':train_acc}, step=example_ct)\n",
     "            #print(epoch_loss, best_loss)\n",
     "            if epoch_loss < best_loss:\n",
     "                best_loss = epoch_loss\n",
@@ -465,7 +369,29 @@
      "output_type": "stream",
      "name": "stderr",
      "text": [
-      "  0%|          | 0/222 [00:00<?, ?batch/s]"
+      "train Epoch 0 : 100%|██████████| 19/19 [00:04<00:00,  4.71batch/s, acc=tensor(0.5000), f1=tensor(0.5000), loss=2.46]\n",
+      "valid Epoch 0 : 100%|██████████| 7/7 [00:00<00:00,  9.05batch/s, acc=tensor(0.), f1=tensor(0.), loss=2.1]\n",
+      "train Epoch 1 : 100%|██████████| 19/19 [00:02<00:00,  6.96batch/s, acc=tensor(0.5000), f1=tensor(0.5000), loss=1.46]\n",
+      "valid Epoch 1 : 100%|██████████| 7/7 [00:00<00:00,  9.70batch/s, acc=tensor(0.5000), f1=tensor(0.5000), loss=0.894]\n",
+      "train Epoch 2 : 100%|██████████| 19/19 [00:03<00:00,  6.06batch/s, acc=tensor(0.8333), f1=tensor(0.8333), loss=0.89]\n",
+      "valid Epoch 2 : 100%|██████████| 7/7 [00:00<00:00,  9.35batch/s, acc=tensor(0.5000), f1=tensor(0.5000), loss=0.523]\n",
+      "train Epoch 3 : 100%|██████████| 19/19 [00:02<00:00,  6.54batch/s, acc=tensor(1.), f1=tensor(1.), loss=0.546]\n",
+      "valid Epoch 3 : 100%|██████████| 7/7 [00:00<00:00,  9.55batch/s, acc=tensor(1.), f1=tensor(1.), loss=0.371]\n",
+      "train Epoch 4 : 100%|██████████| 19/19 [00:02<00:00,  6.46batch/s, acc=tensor(0.8333), f1=tensor(0.8333), loss=0.387]\n",
+      "valid Epoch 4 : 100%|██████████| 7/7 [00:00<00:00, 10.34batch/s, acc=tensor(1.), f1=tensor(1.), loss=0.25]\n",
+      "train Epoch 5 : 100%|██████████| 19/19 [00:02<00:00,  6.61batch/s, acc=tensor(1.), f1=tensor(1.), loss=0.323]\n",
+      "valid Epoch 5 : 100%|██████████| 7/7 [00:00<00:00,  9.32batch/s, acc=tensor(1.), f1=tensor(1.), loss=0.19]\n",
+      "train Epoch 6 : 100%|██████████| 19/19 [00:02<00:00,  7.40batch/s, acc=tensor(0.8333), f1=tensor(0.8333), loss=0.278]\n",
+      "valid Epoch 6 : 100%|██████████| 7/7 [00:00<00:00, 10.17batch/s, acc=tensor(1.), f1=tensor(1.), loss=0.205]\n",
+      "train Epoch 7 : 100%|██████████| 19/19 [00:02<00:00,  7.41batch/s, acc=tensor(0.8333), f1=tensor(0.8333), loss=0.19]\n",
+      "valid Epoch 7 : 100%|██████████| 7/7 [00:00<00:00,  9.71batch/s, acc=tensor(0.5000), f1=tensor(0.5000), loss=0.193]\n",
+      "train Epoch 8 : 100%|██████████| 19/19 [00:02<00:00,  7.64batch/s, acc=tensor(1.), f1=tensor(1.), loss=0.177]\n",
+      "valid Epoch 8 : 100%|██████████| 7/7 [00:00<00:00,  9.80batch/s, acc=tensor(1.), f1=tensor(1.), loss=0.175]\n",
+      "train Epoch 9 : 100%|██████████| 19/19 [00:02<00:00,  7.30batch/s, acc=tensor(1.), f1=tensor(1.), loss=0.13]\n",
+      "valid Epoch 9 : 100%|██████████| 7/7 [00:01<00:00,  4.96batch/s, acc=tensor(1.), f1=tensor(1.), loss=0.131]\n",
+      "train Epoch 10 : 100%|██████████| 19/19 [00:04<00:00,  4.30batch/s, acc=tensor(1.), f1=tensor(1.), loss=0.153]\n",
+      "valid Epoch 10 : 100%|██████████| 7/7 [00:01<00:00,  6.39batch/s, acc=tensor(1.), f1=tensor(1.), loss=0.111]\n",
+      "  0%|          | 0/19 [00:00<?, ?batch/s]"
      ]
     }
    ],
@@ -542,31 +468,10 @@
      "output_type": "stream",
      "name": "stderr",
      "text": [
-      "100%|██████████| 788/788 [03:25<00:00,  3.83batch/s]"
-     ]
-    },
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "test inference is done!\n"
-     ]
-    },
-    {
-     "output_type": "stream",
-     "name": "stderr",
-     "text": [
-      "\n"
+      " 65%|██████▌   | 1029/1575 [01:25<00:44, 12.28batch/s]"
      ]
     }
    ],
-   "metadata": {}
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "source": [],
-   "outputs": [],
    "metadata": {}
   },
   {
